Lab: release 6.0.0 xdev main

--- a/.github/workflows/lab-base-xdev-main.yml
+++ b/.github/workflows/lab-base-xdev-main.yml
@@ -3,7 +3,7 @@ name: Lab Base XDev Main
 on:
   push:
     branches:
-      - 'tmp'
+      - 'master'
     paths:
       - Lab/Base/xdev/main/**/*.*
       - .github/workflows/lab-base-xdev-main.yml
